# home-services

./: nginx-site.conf
arm-ripper/: docker-compose.yml
dokuwiki/: docker-compose.yml
fresh-rss/: docker-compose.yml
homeassitant/: docker-compose.yml
jellyfin/: docker-compose.yml
minecraft/: docker-compose.yml
scripts/: backup-drive  crontab  daily-snapshot  pyproject.toml  zfs-notify
scripts/home_scripts/: notify.py
tabby/: docker-compose.yml
